Fixed swagger doc issue
